--- a/inetpub/wwwroot/ServicesMvc/Views/Document/CreateDocument.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Document/CreateDocument.cshtml
@@ -5,14 +5,21 @@
     @Html.FormValidationSummary()
 
 
+    <div class="space10"></div>
+
+    @Html.HiddenFor(m => m.ID)
+    @Html.HiddenFor(m => m.Name)
+
     @Html.FormDropDownListFor(m => m.DocTypeID, Model.AvailableDocumentTypes.ToSelectList("DocumentTypeID", "DocTypeName"), new {@class = "m-wrap"})
 
 @if (Model.GeneralMode)
 {
     @Html.HiddenFor(m => m.SelectedWebGroups)
+    @Html.FormTextBoxFor(m => m.Tags, new { @class = "m-wrap", maxlength = 100 })
 }
 else
 {
+    @Html.HiddenFor(m => m.Tags)
     @Html.FormMultiSelectListFor(m => m.SelectedWebGroups, Model.AvailableWebGroups.ToSelectList("GroupID", "GroupName"), new { @class = "m-wrap chosen" })
 }
 
@@ -28,22 +35,23 @@ else
 </div>
 
 <script type="text/javascript">
-    
+
     function SetDocumentProperties() {
         // Gruppenzuordnung muss gesetzt sein, damit Upload fortgesetzt werden kann
         if ($("#SelectedWebGroups").val() == null && !@Model.GeneralMode) {
             return false;
         }
-        
+
         var docTypeId = $("#DocTypeID").val().toString();
         var userGroups = $("#SelectedWebGroups").val().toString();
+        var tags = $("#Tags").val().toString();
 
         $.ajax({
             type: "POST",
             url: "SetDocumentProperties",
-            data: { docTypeId: docTypeId, userGroups: userGroups },
+            data: { docTypeId: docTypeId, userGroups: userGroups, tags: tags }
         });
-        
+
         return true;
     }
 
