--- a/inetpub/wwwroot/ServicesMvc/Views/Document/DocumentIndex.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Document/DocumentIndex.cshtml
@@ -1,7 +1,18 @@
 ﻿@model CkgDomainLogic.DomainCommon.ViewModels.DocumentViewModel
 
 <div id="divDokumentGrid">
-    @Html.Partial("DocumentGrid")
+
+    <div class="@(Model.GeneralMode && !Model.AdminMode ? "kroschkedokumentencenter-grid" : "")">
+        @Html.Partial("DocumentGrid")
+    </div>
+
+@if (Model.GeneralMode && !Model.AdminMode)
+{
+    <div class="kroschkedokumentencenter-hint">
+        @Localize.HereYouCanFindAllDocumentsRegarding
+    </div>
+}
+
 </div>
 
 <div id="divDocumentDetails"></div>
@@ -48,7 +59,7 @@
             data: { id: id },
             loadingShow: true,
             success: function (result) {
-                DocumentDeleted(result);
+                DocumentDeleted();
             },
             error: function (result) {
                 alert(result.data);
