--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/ZulassungsdatenForm.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/ZulassungsdatenForm.cshtml
@@ -64,7 +64,7 @@
     .kroschke-evb-control-group-border {
         border: 1px solid #e0e0e0;
         border-radius: 12px!important;
-        padding: 10px;
+        padding: 10px!important;
         margin-bottom: 20px;
     }
     .kroschke-evb-control-group-border .control-group {
@@ -84,10 +84,32 @@
         height: 53px;
     }
     #evb-info {
-        margin: 0 !important;
+        display: block;
+        min-height: 48px;
+        vertical-align: middle;
+        margin: 5px 0 0 0 !important;
         border: 0 !important;
         border-radius: 10px !important;
     }
+    #evb-info i {
+        display: table-cell;
+        vertical-align: middle;
+        width: 48px;
+        height: 48px;
+        background: 0 0 no-repeat;
+    }
+    #evb-info.alert-warning i {
+        background: url(/ServicesMvc/images/icons/48x48/delete.png) 0 0 no-repeat;
+    }
+    #evb-info.alert-success i {
+        background: url(/ServicesMvc/images/icons/48x48/ok.png) 0 0 no-repeat;
+    }
+    #evb-info div {
+        display: table-cell;
+        vertical-align: middle;
+        padding-left: 10px;
+    }
+
 
 </style>
 
