--- a/inetpub/wwwroot/ServicesMvc/Views/Shared/Partial/LayoutPage/Scripts.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Shared/Partial/LayoutPage/Scripts.cshtml
@@ -947,7 +947,7 @@
                     return;
                 }
                 $('#' + infoDivId).show();
-                $('#' + infoDivId).html("<span>" + result.message + "</span>");
+                $('#' + infoDivId + " div").html("<span>" + result.message + "</span>");
                 if (result.isValid) {
                     $('#' + infoDivId).removeClass("alert-warning");
                     $('#' + infoDivId).addClass("alert-success");
