ITA 8606 (work in progress)

--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/BankAdressdatenReForm.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/BankAdressdatenReForm.cshtml
@@ -13,4 +13,6 @@
 
 @Html.FormTextBoxFor(m => m.Ort, new { @class = "m-wrap" }) 
 
-@Html.HiddenFor(m => m.Land) 
+@Html.HiddenFor(m => m.Land)
+@Html.HiddenFor(m => m.Telefon) 
+@Html.HiddenFor(m => m.Email) 
