--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/HalterAdresseForm.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/HalterAdresseForm.cshtml
@@ -13,6 +13,8 @@
         @Html.HiddenFor(m => m.Typ)
         @Html.HiddenFor(m => m.TmpSelectionKey)
         @Html.HiddenFor(m => m.NoSaveButUiRefreshOnly)
+        @Html.HiddenFor(m => m.Telefon)
+        @Html.HiddenFor(m => m.Email)
 
         @Html.FormValidationSummary()
 
