--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/ZahlerKfzSteuerForm.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/ZahlerKfzSteuerForm.cshtml
@@ -25,6 +25,8 @@
                 {
                     @Html.HiddenFor(m => m.Cpdkunde)
                     @Html.HiddenFor(m => m.CpdMitEinzugsermaechtigung)
+                    @Html.HiddenFor(m => m.Adressdaten.Adresse.Telefon)
+                    @Html.HiddenFor(m => m.Adressdaten.Adresse.Email)
 
                     @Html.FormTextBoxFor(m => m.Adressdaten.Adresse.Name1, new { @class = "m-wrap medium" })
                     @Html.FormTextBoxFor(m => m.Adressdaten.Adresse.Name2, new { @class = "m-wrap medium" })
