--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/Receipt.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/Receipt.cshtml
@@ -67,11 +67,15 @@ else
                     {
                         <a href="KundenformularAsPdf?id=@zulassung.BelegNr" class="btn blue tooltips margin-right-5 margin-bottom-5" data-original-title='@Localize.CustomerFormAsPdfFile' data-placement="top"> @Localize.CustomerForm <i class="icon-download-alt"></i></a>
                     }
-            
-                    @*@foreach (var pdfFormular in zulassung.Zusatzformulare.Where(p => !p.IstAuftragsListe))*@
+
                     @foreach (var pdfFormular in zulassung.Zusatzformulare.Where(p => !p.IstAuftragsListe && p.Belegnummer == zulassungBelegNr))
                     {
                         <a href="ZusatzformularAsPdf?id=@pdfFormular.Belegnummer&typ=@pdfFormular.Typ" class="btn blue tooltips margin-right-5 margin-bottom-5"> @pdfFormular.LabelForGui <i class="icon-download-alt"></i></a>
+                    }
+
+                    @if (zulassung.VersandlabelPdf != null)
+                    {
+                        <a href="VersandlabelAsPdf?id=@zulassung.BelegNr" class="btn blue tooltips margin-right-5 margin-bottom-5" data-original-title='@Localize.ShippingLabelAsPdfFile' data-placement="top"> @Localize.ShippingLabel <i class="icon-download-alt"></i></a>
                     }
                 </div>
             </div>
