div. Anpassungen/Korrekturen

--- a/inetpub/wwwroot/ServicesMvc/Areas/DataConverter/Views/Admin/Partial/Common.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/DataConverter/Views/Admin/Partial/Common.cshtml
@@ -237,6 +237,14 @@
         border: 0;
     }
     
+    #divFileContainsHeadings {
+        clear: both;
+    }
+    
+    #divFileContainsHeadings .control-group {
+        margin-bottom: 5px !important;
+    }
+    
 </style>
 
 <script type="text/javascript">
