svg europe map conversion work

--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Esd/AuslandsBeauftragung.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Esd/AuslandsBeauftragung.cshtml
@@ -1,9 +1,9 @@
-﻿@model CkgDomainLogic.Autohaus.ViewModels.CocAnforderungViewModel
+﻿@model CkgDomainLogic.Autohaus.ViewModels.EsdAnforderungViewModel
 
-<h3 class="page-title" id="headerTitle">@Localize.Autohaus_CocAnforderung <small></small></h3>
+<h3 class="page-title" id="headerTitle">@Localize.Autohaus_EsdAnforderung <small></small></h3>
 
 <div id="divKopf">
-    @Html.Partial("Partial/FormKopf", Model.CocAnforderung.Kopfdaten)
+    @Html.Partial("Partial/FormKopf", Model)
 </div>
 
 <div id="divDetails"></div>
