--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Esd/Partial/FormDetails.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Esd/Partial/FormDetails.cshtml
@@ -1,5 +1,5 @@
 ﻿@using CkgDomainLogic.Autohaus.Models
-@model CocAnforderung
+@model EsdAnforderung
 
 <style>
     
@@ -23,14 +23,13 @@
     {    
         <div class="form-horizontal label-width-200" id="searchForm">
             
-            @Html.HiddenFor(m => m.Kopfdaten.FahrzeugTyp)
-            @Html.HiddenFor(m => m.Kopfdaten.Hersteller)
-            @Html.HiddenFor(m => m.Kopfdaten.LandDerErstenZulassung)
+            @*@Html.HiddenFor(m => m.Kopfdaten.FahrzeugTyp)*@
 
             <h5>
-                <span class="bold">@Localize.VehicleType: </span>@Model.Kopfdaten.FahrzeugTypBezeichnung
+                <span class="bold">Gewähltes Land: </span><span>???</span>
+                @*<span class="bold">@Localize.VehicleType: </span>@Model.Kopfdaten.FahrzeugTypBezeichnung
                 <span class="margin-left-10 bold">@Localize.Manufacturer: </span>@Model.Kopfdaten.HerstellerBezeichnung
-                <span class="margin-left-10 bold">@Localize.CountryOfFirstRegistration: </span>@Model.Kopfdaten.LandDerErstenZulassungBezeichnung
+                <span class="margin-left-10 bold">@Localize.CountryOfFirstRegistration: </span>@Model.Kopfdaten.LandDerErstenZulassungBezeichnung*@
             </h5>
 
             @Html.FormValidationSummary()
